Full implementation: Telegram bot, SQLite storage, plugin system, webadmin mini-app, single-run launcher.

--- a/webadmin/index.html
+++ b/webadmin/index.html
@@ -1,1 +1,15 @@
-<!-- index.html content -->
+<!-- webadmin/index.html -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Web Admin</title>
+</head>
+<body>
+    <h1>Welcome to the Web Admin</h1>
+    <script src="main.js"></script>
+</body>
+</html>
