Full working implementation: Telegram bot, SQLite storage, plugin system, webadmin mini-app, launcher, docs.

--- a/webadmin/index.html
+++ b/webadmin/index.html
@@ -1,15 +1,63 @@
-<!-- webadmin/index.html -->
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Админка Telegram-бота</title>
     <link rel="stylesheet" href="style.css">
-    <title>Web Admin</title>
 </head>
-<body>
-    <h1>Welcome to the Web Admin</h1>
+<body class="gradient-violet">
+    <div id="admin-panel" style="display:none;">
+        <h1>Web Admin — Telegram Mini App</h1>
+        <div id="tabs">
+            <button onclick="showTab('stats')">Статистика</button>
+            <button onclick="showTab('users')">Пользователи</button>
+            <button onclick="showTab('groups')">Группы</button>
+            <button onclick="showTab('help')">Help</button>
+            <button onclick="showTab('plugins')">Плагины</button>
+            <button onclick="showTab('settings')">Настройки</button>
+        </div>
+        <div id="tab-content">
+            <div id="tab-stats" class="tab">
+                <h2>Статистика</h2>
+                <ul id="stats-list"></ul>
+            </div>
+            <div id="tab-users" class="tab">
+                <h2>Пользователи</h2>
+                <input type="text" id="search-user" placeholder="Поиск по имени или ID" oninput="filterUsers()">
+                <table id="users-table">
+                    <thead>
+                        <tr><th>ID</th><th>Nickname</th><th>Rank</th><th>Blocked</th><th>Действия</th></tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+            <div id="tab-groups" class="tab">
+                <h2>Группы</h2>
+                <table id="groups-table">
+                    <thead>
+                        <tr><th>ID</th><th>Title</th><th>Blocked</th><th>Действия</th></tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+            <div id="tab-help" class="tab">
+                <h2>Help текст</h2>
+                <textarea id="help-text" rows="4" cols="50"></textarea>
+                <button onclick="saveHelp()">Сохранить</button>
+            </div>
+            <div id="tab-plugins" class="tab">
+                <h2>Плагины</h2>
+                <ul id="plugins-list"></ul>
+            </div>
+            <div id="tab-settings" class="tab">
+                <h2>Настройки</h2>
+                <button onclick="restartBot()">Рестарт бота</button>
+            </div>
+        </div>
+    </div>
+    <div id="no-access" style="display:none;">
+        <h2>Нет доступа</h2>
+        <p>Вход только для администратора</p>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
